--- a/src/view/view1/view1.html
+++ b/src/view/view1/view1.html
@@ -1,4 +1,4 @@
 <div ng-controller="view1Controller" id="view1">
-    this is view1 page!!! <br>
-    {{name}}
+    <div>this is view1 page!!!  </div>
+    <div ng-bind="name" class="name"></div>
 </div>
