--- a/src/view/view2/view2.html
+++ b/src/view/view2/view2.html
@@ -1,4 +1,4 @@
 <div ng-controller="view2Controller" id="view2">
-    this is view2 page!!! <br>
-    {{name}}
+    <div>this is view2 page!!! </div>
+    <div ng-bind="name" class="name"></div>
 </div>
