--- a/src/view/view1/view1.scss
+++ b/src/view/view1/view1.scss
@@ -1,6 +1,6 @@
 #view1 {
-  color:darkred;
-  font-size:18px;
+  color:blue;
+  font-size:30px;
   .name {
     color:#666;
     text-decoration: underline;
